# catch2-min-ex

./: CMakeLists.txt  test.cpp
